--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -36,13 +39,35 @@
                     </div>
                 </div>
 
+                <div class="basliq_form">
+                    <div class="container">
+                        <div class="basliq_form_esas">
+                            <form>
+                                <input type="text" placeholder="What are you looking for?">
+                                <input type="text" placeholder="Location">
+                                <class="bi bi-geo-alt-fill"></i>
 
-
+                                    <select>
+                                        <option value="All catagories">All catagories</option>
+                                        <option value="Real Estate">Real Estate</option>
+                                        <option value="Books & Magazines">Books & Magazines</option>
+                                        <option value="Furniture">Furniture</option>
+                                        <option value="Electronics">Electronics</option>
+                                        <option value="Cars & Vehicles">Cars & Vehicles</option>
+                                        <option value="Others">Others</option>
+                                    </select>
+                                    <button>Search</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
             </div>
-
         </div>
-
     </header>
+
+    <section class="">
+
+    </section>
 
 </body>
 
